Fix contrast of .warning labels
Fixes #184

--- a/src/gtk3/common/scss/gtk-widgets/_text-styles.scss
+++ b/src/gtk3/common/scss/gtk-widgets/_text-styles.scss
@@ -25,7 +25,7 @@ image.warning,
 }
 
 label.warning {
-  color: $warning_color;
+  color: $dark_warning_color;
 }
 
 image.success,
